<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_os_computer_abbreviation_usually_means"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/open_source" />

            <RadioButton
                android:id="@+id/question1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/optical_sensors" />

            <RadioButton
                android:id="@+id/question1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/operating_system" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/_2_which_of_the_following_is_not_a_logical_data_base_structure"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/question2_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chain" />

        <CheckBox
            android:id="@+id/question2_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree" />

        <CheckBox
            android:id="@+id/question2_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network" />

        <CheckBox
            android:id="@+id/question2_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relational" />


        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/_3_what_is_the_language_used_by_most_of_the_dbmss_for_helping_their_users_to_access_data"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question3_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_level_language" />

            <RadioButton
                android:id="@+id/question3_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_language" />

            <RadioButton
                android:id="@+id/question3_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sql" />
        </RadioGroup>

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/_4_periodically_adding_changing_and_deleting_file_records_is_called_file"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/question4_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrading" />

        <CheckBox
            android:id="@+id/question4_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restructuring" />

        <CheckBox
            android:id="@+id/question4_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renewing" />

        <CheckBox
            android:id="@+id/question4_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updating" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/_5_what_do_you_think_of_udacity"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_s_boring" />

            <RadioButton
                android:id="@+id/question5_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_s_fun" />

        </RadioGroup>


        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers" />

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>